--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-email": "^3.0.3",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-string-replace": "^1.1.1",
     "resend": "^4.0.1"
   },
   "devDependencies": {
