--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-email/components": "^0.0.29",
     "axios": "^1.7.9",
     "html-react-parser": "^5.1.18",
+    "lodash": "^4.17.21",
     "next": "15.0.3",
     "prisma": "^6.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
