--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview-email": "email dev -p 2114"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.0.0",
     "@radix-ui/themes": "^3.1.6",
     "@react-email/components": "^0.0.29",
@@ -23,6 +24,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-email": "^3.0.3",
     "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-string-replace": "^1.1.1",
